# insolation_model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
development/: shading.ipynb  shading_on_real_dem.ipynb  solar.ipynb  topo.py  wave_front.ipynb
insolation_model/: insolation.py  raster.py  shading.py  topography.py  vis.py
insolation_model/geometry/: insolation.py  shading.py  solar.py  topography.py
tests/: conftest.py  passing_test.py  test_.py  test_raster.py  test_solar.py  test_topography.py
tests/geometry/: test_point_rotations.py  test_raster-point_conversions.py  test_solar.py  test_topography.py
tests/geometry/shading/: test_gradients.py  test_raster-point_conversions.py  test_raster_gradient_manipulation.py  test_raster_resolution_changes.py  test_raster_resolution_doubler.py  test_rotation.py  test_shading.py  test_wave_front.py
tests/shading/: test_gradients.py  test_rotation.py  test_shading.py  test_wave_front.py
tests/test_data/: context.py  setup.py
