[project]
name = "insolation_model"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["dev*", "tests*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "mypy>=1.15",
    "ruff==0.9.7", # the 0.9.9 has a bug
    "pre-commit>=3.0.0",
    "elevation",
    "matplotlib>=3.8.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-m 'not functional'"  # Exclude functional tests by default
markers = [
    "functional",
]
